# moxl

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  HARDWARE_TODO.md  Makefile  README.md  SIMULATION.md  custom_deps.yaml  docker-compose.yaml  package.xml
config/: controllers.yaml  gps.yaml  joystick.yaml  mowing_params.yaml  nav2_params.yaml  robot_localization.yaml  twist_mux.yaml
config/airstrips/: CDS2.json
config/hardware/: moxl.yaml
description/: gazebo_control.xacro  gps.xacro  imu.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
docs/: moxl-hat-spec.md
docs/measurement-sheets/: HANGAR_TODO.md
docs/wiring/: moxl_harness.yml
hardware/moxl-hat/: .gitignore  gen_pinout_dxf.py  gen_spec_pdf.py  moxl-hat.kicad_pcb  moxl-hat.kicad_pro  moxl-hat.kicad_sch  pinout-table.dxf
hardware/moxl-hat/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
launch/: gps.launch.py  joystick.launch.py  localization.launch.py  mission.launch.py  moxl.launch.py  nav2.launch.py  rsp.launch.py  sim.launch.py  teleop.launch.py
reference/ws_mobile/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
reference/ws_mobile/install/mobile_robot/share/mobile_robot/: package.sh  package.xml
reference/ws_mobile/src/mobile_robot/launch/: gazebo_model.launch.py
reference/ws_mobile/src/mobile_robot/model/: robot.gazebo  robot.xacro
reference/ws_mobile/src/mobile_robot/parameters/: bridge_parameters.yml
scripts/: sim_imu_relay.py  test_follow_path.py
src/action/: MowMission.action
src/lib/bts7960_hw_interface/: CMakeLists.txt  bts7960_hw_interface.xml  package.xml
src/lib/bts7960_hw_interface/include/bts7960_hw_interface/: bts7960_system.hpp
src/lib/bts7960_hw_interface/src/: bts7960_system.cpp
src/map_server/: geo_json_map.cpp  geo_json_map.hpp  map_server_node.cpp  map_server_node.hpp  node_main.cpp  polygon_iterator.hpp
src/map_server/test/: load_geojson_map.test.py
src/msg/: BladeStatus.msg  EngineStatus.msg  MissionStatus.msg  RadioDetection.msg
src/sim/: node_main.cpp  sim_node.cpp  sim_node.hpp
src/srv/: SetBlades.srv  StartEngine.srv  StopEngine.srv
src/toolpath_planner/: package.xml  setup.cfg  setup.py
src/toolpath_planner/nodes/: blade_controller_node.py  engine_controller_node.py  heading_to_imu_node.py  mission_node.py  safety_monitor_node.py  sdr_detector_node.py  toolpath_node.py
src/toolpath_planner/test/: test_coordinate_utils.py  test_polygon_loader.py  test_strip_generator.py
src/toolpath_planner/toolpath_planner/: coordinate_utils.py  polygon_loader.py  strip_generator.py
systemd/: moxl.service
utils/: docker-entrypoint.sh  wsl-setup.sh
worlds/: empty.sdf
