<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bts7960_hw_interface</name>
  <version>0.1.0</version>
  <description>ros2_control hardware interface for BTS7960 H-bridge motor drivers via Raspberry Pi GPIO (pigpio)</description>
  <maintainer email="4perryc@gmail.com">Perry C</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
